--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "BotBone's nodejs based HMI.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "./node_modules/.bin/webpack"
   },
   "repository": {
     "type": "git",
@@ -13,9 +14,22 @@
   "keywords": [
     "Botbone"
   ],
-  "author": "Cheng-Chang Wu",
+  "author": "Cheng-Chang Wu <ccwu660601@mapacode.tw>",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.11.1"
+    "debug": "^2.1.1",
+    "express": "^4.11.1",
+    "flux-router-component": "^0.5.7",
+    "fluxible": "^0.1.5",
+    "node-jsx": "^0.12.4",
+    "purecss": "^0.5.0",
+    "react": "^0.12.2",
+    "serialize-javascript": "^1.0.0"
+  },
+  "devDependencies": {
+    "css-loader": "^0.9.1",
+    "jsx-loader": "^0.12.2",
+    "style-loader": "^0.8.3",
+    "webpack": "^1.5.3"
   }
 }
