--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "botbone-hmi",
+  "name": "botnana-hmi",
   "version": "0.0.1",
   "description": "BotBone's nodejs based HMI.",
+  "private": true,
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "./node_modules/.bin/webpack"
+    "build": "./node_modules/.bin/webpack && npm run copy:d3 && npm run copy:purecss && npm run copy:assets",
+
+    "copy:d3": "install -d ./build/js && install ./node_modules/d3/d3.min.js ./build/js",
+    "copy:purecss": "install -d ./build/ && install ./node_modules/purecss/pure-min.css ./build/",
+    "copy:assets": "install ./assets/*.* ./build/ && install -d ./build/img && install ./assets/img/*.* ./build/img/"
   },
   "repository": {
     "type": "git",
@@ -30,10 +35,6 @@
   },
   "devDependencies": {
     "css-loader": "^0.9.1",
-    "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-copy": "^0.7.0",
-    "grunt-webpack": "^1.0.8",
     "jsx-loader": "^0.12.2",
     "style-loader": "^0.8.3",
     "webpack": "^1.5.3",
