--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "./node_modules/.bin/webpack && npm run copy:d3 && npm run copy:purecss && npm run copy:assets",
-
-    "copy:d3": "install -d ./build/js && install ./node_modules/d3/d3.min.js ./build/js",
-    "copy:purecss": "install -d ./build/ && install ./node_modules/purecss/pure-min.css ./build/",
-    "copy:assets": "install ./assets/*.* ./build/ && install -d ./build/img && install ./assets/img/*.* ./build/img/"
+    "build": "./node_modules/.bin/webpack && npm run copy-d3 && npm run copy-purecss && npm run copy-assets",
+    "copy-d3": "install -d ./build/js && install ./node_modules/d3/d3.min.js ./build/js",
+    "copy-purecss": "install -d ./build/ && install ./node_modules/purecss/pure-min.css ./build/",
+    "copy-assets": "install ./assets/*.* ./build/ && install -d ./build/img && install ./assets/img/*.* ./build/img/",
+    "create-user": "adduser --disabled-login --home /srv/www/botnana --gecos 'Botnana' botnana",
+    "delete-user": "userdel -r botnana",
+    "deploy": "id -u botnana 1> /dev/null && echo 'Installing Botnana HMI' && install -m 0755 -o botnana -g botnana -d /srv/www/botnana/hmi && su botnana -c'cp -r ./build ./components ./configs ./node_modules ./scripts ./stores ./server.js ./app.js /srv/www/botnana/hmi'",
+    "undeploy": "rm -R /srv/www/botnana/hmi" 
   },
   "repository": {
     "type": "git",
