CCWU: fixed package.json.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "copy-purecss": "install -d ./build/ && install ./node_modules/purecss/pure-min.css ./build/",
     "copy-assets": "install ./assets/*.* ./build/ && install -d ./build/img && install ./assets/img/*.* ./build/img/",
     "deploy": "id -u botnana 1> /dev/null && echo 'Installing Botnana HMI' && install -m 0755 -o botnana -g botnana -d /srv/www/botnana/hmi && su botnana -c'cp -r ./build ./components ./configs ./node_modules ./scripts ./stores ./server.js ./app.js /srv/www/botnana/hmi' && npm run deploy-composite-gadget",
-    "deploy-composite-gadget": "cp ./scripts/botnana-hmi-composite-gadget.sh /etc/init.d/ && update-rc.d botnana-hmi-composite-gadget.sh defaults",
+    "deploy-composite-gadget": "cp ./scripts/botnana-hmi-composite-gadget.sh /etc/init.d/ && update-rc.d botnana-hmi-composite-gadget.sh defaults"
   },
   "repository": {
     "type": "git",
