--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "css-loader": "^0.9.1",
     "jsx-loader": "^0.12.2",
     "style-loader": "^0.8.3",
-    "webpack": "^1.5.3",
-    "webpack-dev-server": "^1.7.0"
+    "webpack": "^1.5.3"
   }
 }
