--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "./node_modules/.bin/webpack && npm run copy-d3 && npm run copy-purecss && npm run copy-assets",
     "copy-d3": "install -d ./build/js && install ./node_modules/d3/d3.min.js ./build/js",
-    "copy-purecss": "install -d ./build/ && install ./node_modules/purecss/pure-min.css ./build/",
+    "copy-purecss": "install -d ./build/ && install ./node_modules/purecss/pure-min.css ./node_modules/purecss/grids-responsive-min.css ./build/",
     "copy-assets": "install -d ./build/ && cp -r ./assets ./build/",
     "deploy": "id -u botnana 1> /dev/null && echo 'Installing Botnana HMI' && install -m 0755 -o botnana -g botnana -d /srv/www/botnana/hmi && su botnana -c'cp -r ./build ./components ./configs ./node_modules ./scripts ./stores ./server.js ./app.js /srv/www/botnana/hmi' && npm run deploy-composite-gadget",
     "deploy-composite-gadget": "cp ./scripts/botnana-hmi-composite-gadget.sh /etc/init.d/ && update-rc.d botnana-hmi-composite-gadget.sh defaults"
@@ -22,12 +22,14 @@
   "author": "Cheng-Chang Wu <ccwu660601@mapacode.tw>",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.12.0",
+    "botnana-blog-service": "0.0.1",
+    "cookie-parser": "^1.3.4",
+    "csurf": "^1.7.0",
     "d3": "^3.5.3",
     "debug": "^2.1.1",
     "express": "^4.11.1",
-    "flux-router-component": "^0.5.7",
-    "fluxible": "^0.1.5",
-    "fluxible-plugin-routr": "^0.3.0",
+    "fluxible": "^0.2.2",
     "marked": "^0.3.3",
     "node-jsx": "^0.12.4",
     "purecss": "^0.5.0",
