--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.12.0",
-    "botnana-blog-service": "0.0.1",
+    "botnana-blog-service": "git+ssh://git@bitbucket.org:mapacode/botnana-blog-service.git",
     "cookie-parser": "^1.3.4",
     "csurf": "^1.7.0",
     "d3": "^3.5.3",
