--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "copy-d3": "install -d ./build/js && install ./node_modules/d3/d3.min.js ./build/js",
     "copy-purecss": "install -d ./build/ && install ./node_modules/purecss/pure-min.css ./node_modules/purecss/grids-responsive-min.css ./build/",
     "copy-assets": "install -d ./build/ && cp -r ./assets ./build/",
-    "deploy": "id -u botnana 1> /dev/null && echo 'Installing Botnana HMI' && install -m 0755 -o botnana -g botnana -d /srv/www/botnana/hmi && su botnana -c'cp -r ./build ./components ./configs ./node_modules ./scripts ./stores ./server.js ./app.js /srv/www/botnana/hmi' && npm run deploy-composite-gadget",
+    "deploy": "id -u botnana 1> /dev/null && echo 'Installing Botnana HMI' && install -m 0755 -o botnana -g botnana -d /srv/www/botnana/hmi && su botnana -c'cp -r ./build ./components ./posts ./configs ./node_modules ./scripts ./actions ./stores ./server.js ./app.js /srv/www/botnana/hmi' && npm run deploy-composite-gadget",
     "deploy-composite-gadget": "cp ./scripts/botnana-hmi-composite-gadget.sh /etc/init.d/ && update-rc.d botnana-hmi-composite-gadget.sh defaults"
   },
   "repository": {
