--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "d3": "^3.5.3",
     "debug": "^2.1.1",
     "express": "^4.11.1",
+    "flux-router-component": "^0.5.12",
     "fluxible": "^0.2.2",
+    "fluxible-plugin-fetchr": "^0.2.3",
+    "fluxible-plugin-routr": "^0.3.0",
     "marked": "^0.3.3",
     "node-jsx": "^0.12.4",
     "purecss": "^0.5.0",
