--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "author": "Cheng-Chang Wu <ccwu660601@mapacode.tw>",
   "license": "ISC",
   "dependencies": {
-    "MiniCodeEdit": "git+https://github.com/ajaxorg/ace-builds#master",
+    "MiniCodeEdit": "git+https://github.com/ajaxorg/ace-builds#b14d255",
     "body-parser": "^1.12.0",
     "botnana-blog-service": "git+ssh://botnana@botnana.mapacode.tw/botnana-blog-service.git",
     "cookie-parser": "^1.3.4",
