--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "copy-d3": "install -d ./build/js && install ./node_modules/d3/d3.min.js ./build/js",
     "copy-purecss": "install -d ./build/ && install ./node_modules/purecss/pure-min.css ./node_modules/purecss/grids-responsive-min.css ./build/",
     "copy-assets": "install -d ./build/ && cp -r ./assets ./build/",
-    "deploy": "id -u botnana 1> /dev/null && echo 'Installing Botnana HMI' && install -m 0755 -o botnana -g botnana -d /srv/www/botnana/hmi && su botnana -c'cp -r ./build ./components ./posts ./configs ./node_modules ./scripts ./actions ./stores ./server.js ./app.js /srv/www/botnana/hmi' && su botnana -c'ln -s /srv/www/botnana/hmi/node_modules/MiniCodeEdit /srv/www/botnana/hmi/build/js/' && npm run deploy-composite-gadget",
+    "deploy": "id -u botnana 1> /dev/null && echo 'Installing Botnana HMI' && install -m 0755 -o botnana -g botnana -d /srv/www/botnana/hmi && su botnana -c'cp -r ./build ./components ./posts ./configs ./node_modules ./scripts ./actions ./stores ./server.js ./app.js /srv/www/botnana/hmi' && rm /srv/www/botnana/hmi/build/js/MiniCodeEdit && su botnana -c'ln -s /srv/www/botnana/hmi/node_modules/MiniCodeEdit /srv/www/botnana/hmi/build/js/' && npm run deploy-composite-gadget",
     "deploy-composite-gadget": "cp ./scripts/botnana-hmi-composite-gadget.sh /etc/init.d/ && update-rc.d botnana-hmi-composite-gadget.sh defaults"
   },
   "repository": {
@@ -44,6 +44,6 @@
     "css-loader": "^0.9.1",
     "jsx-loader": "^0.12.2",
     "style-loader": "^0.8.3",
-    "webpack": "^1.5.3"
+    "webpack": "^1.6.0"
   }
 }
