--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "MiniCodeEdit": "git+https://github.com/ajaxorg/ace-builds#b14d255",
     "body-parser": "^1.12.0",
     "botnana-blog-service": "git+ssh://botnana@botnana.mapacode.tw/botnana-blog-service.git",
+    "botnana-blog-view": "git+ssh://botnana@botnana.mapacode.tw/botnana-blog-view.git",
     "cookie-parser": "^1.3.4",
     "csurf": "^1.7.0",
     "d3": "^3.5.3",
