--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "ssh://botnana@botnana.mapacode.tw/botnana-hmi.git"
+    "url": "https://github.com/botnana/hmi.git"
   },
   "keywords": [
     "Botbone"
@@ -23,8 +23,8 @@
   "dependencies": {
     "MiniCodeEdit": "git+https://github.com/ajaxorg/ace-builds#b14d255",
     "body-parser": "^1.12.0",
-    "botnana-blog-service": "git+ssh://botnana@botnana.mapacode.tw/botnana-blog-service.git",
-    "botnana-blog-view": "git+ssh://botnana@botnana.mapacode.tw/botnana-blog-view.git",
+    "botnana-blog-service": "git+https://github.com/botnana/blog-service.git",
+    "botnana-blog-view": "git+https://github.com/botnana/blog-view.git",
     "cookie-parser": "^1.3.4",
     "csurf": "^1.7.0",
     "d3": "^3.5.3",
